--- a/docker/lambda/Dockerfile
+++ b/docker/lambda/Dockerfile
@@ -2,6 +2,8 @@ FROM public.ecr.aws/lambda/python:3.11
 
 RUN yum install -y git
 
+COPY ../models ./models
+
 COPY requirements.txt ./
 
 RUN pip install -r requirements.txt
