Add models directory2

--- a/docker/lambda/Dockerfile
+++ b/docker/lambda/Dockerfile
@@ -2,7 +2,7 @@ FROM public.ecr.aws/lambda/python:3.11
 
 RUN yum install -y git
 
-COPY ../models ./models
+COPY .../models ./models
 
 COPY requirements.txt ./
 
