Use old version of docker lambdas

--- a/docker/lambda/Dockerfile
+++ b/docker/lambda/Dockerfile
@@ -2,14 +2,10 @@ FROM public.ecr.aws/lambda/python:3.11
 
 RUN yum install -y git
 
-ARG BUILD_DIR
-
-COPY ${BUILD_DIR}/requirements.txt ./
+COPY requirements.txt ./
 
 RUN pip install -r requirements.txt
 
-COPY ${BUILD_DIR}/ ./
-
-COPY ./src/models ./models
+COPY . ./
 
 CMD ["main.lambda_handler"]
